Añadir animaciones usando AOS

--- a/src/app/pages/album/album.component.html
+++ b/src/app/pages/album/album.component.html
@@ -3,8 +3,8 @@
         @if (isLoading) {
         <div class="text-center text-white">Cargando álbum...</div>
         } @else if (album) {
-        <!--cbecera del álbum -->
-        <div class="flex flex-col md:flex-row items-center md:items-end gap-6">
+        <!-- Cabecera del álbum -->
+        <div data-aos="fade-up" class="flex flex-col md:flex-row items-center md:items-end gap-6">
             <img [src]="album.cover_xl" [alt]="album.title" class="w-56 h-56 rounded-xl shadow-lg object-cover" />
             <div>
                 <p class="uppercase text-sm text-gray-300 font-semibold">Álbum</p>
@@ -22,13 +22,13 @@
             </div>
         </div>
 
-        <!--lista de canciones -->
-        <div class="mt-12">
+        <!-- Lista de canciones -->
+        <div data-aos="fade-up" data-aos-delay="200" class="mt-12">
             <h2 class="text-2xl font-semibold mb-4">Lista de canciones</h2>
             <div class="divide-y divide-gray-700">
                 <div *ngFor="let track of album.tracks.data; let i = index"
-                    class="py-3 flex items-center gap-4 group hover:bg-white/10 px-2 rounded">
-
+                    class="py-3 flex items-center gap-4 group hover:bg-white/10 px-2 rounded" data-aos="fade-up"
+                    [attr.data-aos-delay]="(i + 1) * 50">
                     <span class="w-6 text-right text-sm text-gray-400">{{ i + 1 }}</span>
 
                     <div class="flex-1 min-w-0 flex flex-col justify-center">
