Ajustes de color

--- a/src/app/pages/artist/artist.component.html
+++ b/src/app/pages/artist/artist.component.html
@@ -1,4 +1,4 @@
-<div class="bg-[#1f1f3a] min-h-screen text-white">
+<div class="bg-gradient-to-b from-[#1f1f3a] to-[#0f0f1e] min-h-screen text-white">
     <div class="max-w-7xl mx-auto px-4 py-6" data-aos="fade-in">
 
         @if (loading()) {
