Añadir funcionalidad favoritos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
 <main [ngClass]="{'pt-[80px]': !isHome(), 'md:pt-[90px]': !isHome()}">
+    <app-toast #toast></app-toast>
 
     <router-outlet></router-outlet>
     <app-global-player />
