--- a/src/app/pages/artist/artist.component.html
+++ b/src/app/pages/artist/artist.component.html
@@ -57,18 +57,8 @@
         <h2 class="text-2xl mt-8 mb-4 font-semibold" data-aos="fade-up">Top Canciones</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             @for (track of topTracks(); track track.id) {
-            <div class="bg-white/10 rounded-xl p-4 flex gap-4 items-center hover:shadow-lg transition-transform duration-300 hover:scale-[1.02]"
-                data-aos="zoom-in">
-                <img [src]="track.album.cover_small" [alt]="track.title" class="w-16 h-16 rounded" />
-                <div class="flex-1 min-w-0">
-                    <p class="font-semibold truncate">{{ track.title }}</p>
-                    <span class="text-sm text-gray-400">
-                        {{ (track.duration / 60) | number:'1.0-0' }} min
-                    </span>
-                </div>
-                <app-preview-button [previewUrl]="track.preview" [title]="track.title" [artist]="track.artist?.name"
-                    [cover]="track.album?.cover_medium"></app-preview-button>
-            </div>
+            <app-track-card [track]="track"></app-track-card>
+
             }
         </div>
         }
