--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,13 +8,15 @@
             class="p-3 border rounded-md dark:bg-zinc-800 dark:text-white" [disabled]="loading" />
 
         <button type="submit" [disabled]="loginForm.invalid || loading"
-            class="bg-purple-600 text-white py-3 rounded-md hover:bg-purple-700 disabled:opacity-50">
-            {{ loading ? 'Cargando...' : 'Entrar' }}
-        </button>
+            class="bg-gradient-to-r from-purple-500 to-indigo-600 text-white py-3 rounded-xl font-semibold transition hover:scale-105 hover:shadow-md disabled:opacity-50 disabled:cursor-not-allowed">
+            {{ loading ? 'Cargando...' : 'Entrar' }} </button>
     </form>
 
-    <button (click)="loginWithGoogle()" class="w-full mt-4 bg-red-600 text-white py-3 rounded-md hover:bg-red-700"
+    <button (click)="loginWithGoogle()"
+        class="w-full flex items-center justify-center gap-3 mt-4 bg-white text-gray-700 py-3 rounded-xl font-semibold shadow hover:shadow-lg transition hover:scale-105 disabled:opacity-50"
         [disabled]="loading || successMsg" *ngIf="!successMsg">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" class="w-5 h-5" />
+
         {{ loading ? 'Cargando...' : 'Entrar con Google' }}
     </button>
 
